--- a/featured.html
+++ b/featured.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" type="headlogo.png" href="favicon.png">
+ <link rel="icon" type="image/png" href="headlogo.png">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Studio Horizone LK — Gallery</title>
