--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-   <link rel="icon" type="image/png" href="headlogo.png">
    <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
@@ -85,7 +84,7 @@
 
   <div class="hero-content" role="region" aria-label="Intro">
    <div>
-    <h1>Welcome &nbsp; to &nbsp; Horizone &nbsp;Lk</h1>
+    <h1>Welcome &nbsp; to &nbsp; Horiozne &nbsp;Lk</h1>
     <h1>—&nbsp;&nbsp; Where &nbsp; we &nbsp; turn &nbsp; your &nbsp; moments &nbsp; Timeless&nbsp;&nbsp;—</h1>
     </div>
 
@@ -93,7 +92,7 @@
 
     <div class="hero-cta">
       <a class="cta" href="#portfolio">View Work</a>
-      <a class="social-btn" href="https://www.instagram.com/studiohorizone_lk?igsh=MTNjOWF1MWJibXFxeQ==" target="_blank">Instagram</a>
+      <a class="social-btn" href="https://www.instagram.com/horizone_lk" target="_blank">Instagram</a>
       <a class="social-btn2" href="https://www.instagram.com/horizone_lk" target="_blank">Contact Us</a>
     </div>
 
@@ -304,9 +303,9 @@
     <section id="socials" class="fade-section">
       <h2 class="center mb-8">Follow us</h2>
       <div class="social-row">
-        <a class="social-btn3" href="https://www.facebook.com/share/1Cdr1MfZRF/" target="_blank" rel="noopener noreferrer">Facebook</a>
+        <a class="social-btn3" href="https://www.facebook.com" target="_blank" rel="noopener noreferrer">Facebook</a>
         <a class="social-btn3" href="https://www.instagram.com/studiohorizone_lk?igsh=MTNjOWF1MWJibXFxeQ==" target="_blank" rel="noopener noreferrer">Instagram</a>
-        <a class="social-btn3" href="https://youtube.com/@horizone_lk?si=h58xyBTgmmMsbEEY" target="_blank" rel="noopener noreferrer">YouTube</a>
+        <a class="social-btn3" href="https://youtube.com" target="_blank" rel="noopener noreferrer">YouTube</a>
         <a class="social-btn3" href="https://www.tiktok.com" target="_blank" rel="noopener noreferrer">TikTok</a>
       </div>
     </section>
@@ -654,7 +653,3 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
-
-
-
-
