--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
   <div class="hero-content" role="region" aria-label="Intro">
    <div>
-    <h1>Welcome &nbsp; to &nbsp; Horiozne &nbsp;Lk</h1>
+    <h1>Welcome &nbsp; to &nbsp; Horizone &nbsp;Lk</h1>
     <h1>—&nbsp;&nbsp; Where &nbsp; we &nbsp; turn &nbsp; your &nbsp; moments &nbsp; Timeless&nbsp;&nbsp;—</h1>
     </div>
 
@@ -653,3 +653,4 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
