--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <div class="project-content">
           <h3>Sanghamitta College 96'</h3>
           <p>Venue - Araliya Beach Resort - Galle.</p> 
-          <p>Officia Photography Partner</p>
+          <p>Official Photography Partner</p>
           <a href="https://m.facebook.com/story.php?story_fbid=pfbid02mm5R9XK5hhcyQZCMzbvvSzeLpKtiy7jfTrbadfPxegtCuGg632KLNHMR9PuS2zLPl&id=61579559351313&mibextid=ZbWKwL" target="_blank" class="project-btn">
             Visit Album
           </a>
@@ -702,3 +702,4 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
