--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <div class="meta-row" aria-hidden="true">
-      <div class="meta">Profesionality</div>
+      <div class="meta">Professionality</div>
       <div class="meta">Events • Concerts • Parties</div>
       <div class="meta">Based in Sri Lanka</div>
     </div>
@@ -702,4 +702,5 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
