--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
     <p class="lead">Studio Horizone LK — turning moments into cinematic memories. We specialize in Event Photography, Videography, Trailers, After Movies & Aerial Videography.</p>
 
-    <div class="hero-cta">
+ <div class="hero-cta">
       <a class="cta" href="#portfolio">View Work</a>
-      <a class="social-btn" href="https://www.instagram.com/horizone_lk" target="_blank">Instagram</a>
-      <a class="social-btn2" href="https://www.instagram.com/horizone_lk" target="_blank">Contact Us</a>
+      <a class="social-btn" href="https://www.instagram.com/studiohorizone_lk/" target="_blank">Instagram</a>
+      <a class="social-btn2" href="#contact">Contact Us</a>
     </div>
 
     <div class="meta-row" aria-hidden="true">
@@ -148,7 +148,7 @@
 
 
 <!-- PORTFOLIO -->
- <div class="portfolio-padding">
+ <div class="portfolio-padding" id="portfolio">
     
     
 <section class="projects">
@@ -702,6 +702,7 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
 
 
