--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <img src="Videopr007.jpg" alt="Wedding Film">
         <div class="project-content">
           <h3>ELITE SLAM '26</h3>
-          <p>Venue - St. Aloysus' College Basket Ball Court</p> 
+          <p>Venue - St. Aloysius' College Basket Ball Court</p> 
           <p>Official Photography Partner - Album 01</p>
           <a href="https://www.facebook.com/share/p/1C54h2ESEa/" target="_blank" class="project-btn">
             Visit Album
@@ -729,6 +729,7 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
 
 
