--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 <!-- Mobile Video -->
 <video class="hero-video mobile-video" autoplay muted loop playsinline>
-  <source src="BARISTA.mp4" type="video/mp4">
+  <source src="barista.mp4" type="video/mp4">
 </video>
 
 
@@ -729,6 +729,7 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
 
 
