--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
    <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+<link rel="icon" href="headlogo.png" sizes="32x32">
+<link rel="icon" href="headlogo.png" sizes="192x192">
 
   <title>Studio Horizone LK — Portfolio</title>
   <link rel="stylesheet" href="Main HuB.css">
@@ -729,6 +731,7 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
 
 
