--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <h1>—&nbsp;&nbsp; Where &nbsp; we &nbsp; turn &nbsp; your &nbsp; moments &nbsp; Timeless&nbsp;&nbsp;—</h1>
     </div>
 
-    <p class="lead">Studio Horizone LK — turning moments into cinematic memories. We specialize in Event Photography, Videography, Trailers, After Movies & Aerial Videography.</p>
+    <p class="lead">Studio Horizone LK — A collaboration of Gen Zs Based in Galle, turning moments into cinematic memories. We specialize in Event Photography, Videography, Trailers, After Movies & Aerial Videography.</p>
 
  <div class="hero-cta">
       <a class="cta" href="#portfolio">View Work</a>
@@ -731,6 +731,7 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
 
 
