--- a/index.html
+++ b/index.html
@@ -84,22 +84,19 @@
   <div class="bg-layer layer-1"></div>
   <div class="bg-layer layer-2"></div>
 
-  <div class="hero-content" role="region" aria-label="Intro">
-   <div>
-    <h1>Welcome &nbsp; to &nbsp; Horiozne &nbsp;Lk</h1>
-    <h1>—&nbsp;&nbsp; Where &nbsp; we &nbsp; turn &nbsp; your &nbsp; moments &nbsp; Timeless&nbsp;&nbsp;—</h1>
-    </div>
+ <div class="hero-content" role="region" aria-label="Intro">
+    
+    <img class="bgimg" src="letsmakeithappen.png">
 
-    <p class="lead">Studio Horizone LK — A collaboration of Gen Zs Based in Galle, turning moments into cinematic memories. We specialize in Event Photography, Videography, Trailers, After Movies & Aerial Videography.</p>
-
- <div class="hero-cta">
+    
+    <div class="hero-cta">
       <a class="cta" href="#portfolio">View Work</a>
       <a class="social-btn" href="https://www.instagram.com/studiohorizone_lk/" target="_blank">Instagram</a>
       <a class="social-btn2" href="#contact">Contact Us</a>
     </div>
 
     <div class="meta-row" aria-hidden="true">
-      <div class="meta">Professionality</div>
+      <div class="meta">Profesionality</div>
       <div class="meta">Events • Concerts • Parties</div>
       <div class="meta">Based in Sri Lanka</div>
     </div>
@@ -731,6 +728,7 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
 
 
