--- a/index.html
+++ b/index.html
@@ -86,7 +86,14 @@
 
  <div class="hero-content" role="region" aria-label="Intro">
     
-    <img class="bgimg" src="letsmakeithappen.png">
+<img class="bgimg bgimg-desktop" 
+  src="letsmakeithappen.png" >
+
+
+<!-- Mobile Video -->
+<img class="bgimg bgimg-mobile" 
+ src="letsmakeithappen2.png" >
+
 
     
     <div class="hero-cta">
@@ -728,6 +735,7 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
 
 
