--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
   <!-- REAL video background -->
  <!-- Desktop Video -->
 <video class="hero-video desktop-video" autoplay muted loop playsinline>
-  <source src="BGvideo.mp4" type="video/mp4">
+  <source src="BGvideo.mp4" type="video/mp4" alt="Horizone banner.png">
 </video>
 
 <!-- Mobile Video -->
 <video class="hero-video mobile-video" autoplay muted loop playsinline>
-     <source src="BGvideo2.mp4" type="video/mp4">
+     <source src="BGvideo2.mp4" type="video/mp4" alt="Horizone banner.png">
 </video>
 
 
