--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
 </head>
 <body>
 
+     <!-- Preloader -->
+  <div class="preloader" id="preloader" aria-hidden="true">
+    <div class="logo-wrap" aria-hidden="true">
+      <img src="logo.png" alt="Logo" style="height:42px;border-radius:6px;object-fit:contain">
+      <div style="display:flex;flex-direction:column">
+        <strong style="color:var(--white); font-family:var(--fw-serif)">Studio Horizone LK</strong>
+        <div style="display:flex; gap:6px; margin-top:8px">
+          <div class="dot"></div><div class="dot"></div><div class="dot"></div>
+        </div>
+      </div>
+    </div>
+  </div>
   
   <div class="scroll-bar" id="scrollBar"></div>
 
@@ -421,7 +433,7 @@ Visit Album
   // preloader hide
   window.addEventListener('load', ()=> {
     const pre = document.getElementById('preloader');
-    setTimeout(()=> pre.classList.add('hidden'), 600);
+    setTimeout(()=> pre.classList.add('hidden'), 300);
   });
 
   // navc bar
@@ -723,6 +735,7 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
 
 
