--- a/index.html
+++ b/index.html
@@ -348,6 +348,14 @@ Visit Album
 </section>
 </div>
 
+
+     <center><h1 class="confrimh1">Booking & Confirming Forum</h1><a href="https://docs.google.com/forms/d/e/1FAIpQLSeiLGbZRotgVXIcIhFaf4Un95Z25Tl4vxm-uF8k6TIgqMpO4Q/viewform?usp=publish-editor" 
+   target="_blank" 
+   class="confirm-btn">
+   LOCK IT IN 🚀
+</a></center>
+
+
 <!--Feedbacks-->
 
 <div class="feedbacks">
@@ -735,6 +743,7 @@ for (let i = 0; i < 40; i++) {
   </script>
 </body>
 </html>
+
 
 
 
